<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="32"
        android:inputType="textPersonName"
        android:hint="@string/expense_name_hint"
        android:maxLength="32"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/costText"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="8"
        android:hint="@string/cost_hint"
        android:inputType="number" />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="3dp"-->
        <!--android:layout_marginBottom="2dp"-->
        <!--android:layout_gravity="left">-->

        <!--<TextView-->
            <!--android:id="@+id/text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text=""-->
            <!--android:paddingRight="5dp"-->
            <!--android:textSize="18sp" />-->

        <!--<Spinner-->
            <!--android:id="@+id/daySpinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:minWidth="40dp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button" />
    </LinearLayout>
</LinearLayout>
